src/test/deca/test_compilateur/context/invalid/created/instanceof/instanceof_1.0_A.deca
// Description :
//    test instanceof entre un 1.0 et un A
//
// Resultats :
//		Erreur contextuelle
//    	Ligne 10 : (3.40) Type gauche : <>, attendu : 'class' ou 'null',  Type droit : <>, attendu : 'class'
class A{}
{
A a;
boolean c = 1.0 instanceof A;
}
